--- a/members.html
+++ b/members.html
@@ -118,7 +118,7 @@
         </script>
         
         <div id="navbar" class="animate-bottom">
-            <a href="#top"><img src="pgn-logo.png" width="210" height="62" alt=""/></a>
+            <a href="#top"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
             <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLSdTKj-UcJxCaYEE2SS0lSPMWJLDaLEn1aHu64YYaZBy9s98Jw/viewform" target="_blank">APPLY NOW</a>
             <a class="active navbar-right" href="recruitment.html">RECRUITMENT</a>
             <a class="active navbar-right" href="#top">MEMBERS</a>
