--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                         <h2>ABOUT US</h2>
                     </div>
                     <div class="indented">
-                        <p style = "font-family: Open Sans">
-                        PGN is a professional development organization that was founded in 1924. Since then, the organization has grown immensely, expanding to 20+ active chapters and drawing driven individuals from all majors and backgrounds to grow their professional and personal skills to better succeed in today's workplace and serve as tomorrow's leaders. Members dedicate themselves to PGN's three pillars: professionalism, social, and philanthropy.<br><br>
+                       
+                        <p>PGN is a professional development organization that was founded in 1924. Since then, the organization has grown immensely, expanding to 20+ active chapters and drawing driven individuals from all majors and backgrounds to grow their professional and personal skills to better succeed in today's workplace and serve as tomorrow's leaders. Members dedicate themselves to PGN's three pillars: professionalism, social, and philanthropy.<br><br>
 
                         At the University of Michigan, PGN is an excellent way to meet other strongly motivated business-inclined students on campus. Members specialize in a variety of fields by combining their business interests with their areas of expertise such as finance, marketing, entrepreneurship, music performance, engineering, law and more.<br><br>
 
