--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <td text-align="left">
                                 <div class="indented">
                                     <p>
-                                        Welcome to Phi Gamma Nu at the University of Michigan!
+                                        Welcome to PGN at the University of Michigan!
                                     </p>
                                     <p>
                                         PGN is one of the largest co-ed business development organizations in the United States, encompassing a rich history dating back to its founding in 1924 at Northwestern University. We pride ourself on three pillars: professional, social, and philanthropy. As a member of PGN, you have access to a network of dynamic leaders, both on and off campus. Recent exclusive networking events include Deloitte, McKinsey, LinkedIn, Google, and Qualtrics.
