--- a/recruitment.html
+++ b/recruitment.html
@@ -172,7 +172,7 @@
                             <h3> BBA Meet the Clubs </h3>
                             <h4> Thursday, September 9th | 6-9pm EST |</h4>
                             <p> Attendance Highly Recommended </p>
-                            <p> Dresscode: Casual </p>
+                            <p1> Dresscode: Casual </p1>
                             <p> Location: Rawss </p>
                             <p2> Come learn about PGN and our recruiting process! </p2>
 
@@ -185,7 +185,7 @@
                         <img src="pgn-prof-slides/pgn-prof-slides-3.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Mass Meeting </h3>
-                            <h4> Session 1: Wednesday, September 12th | 8-9pm EST |</h4>
+                            <h4> Wednesday, September 12th | 8-9pm EST |</h4>
                             <p> Attendance Highly Recommended </p>
                             <p> Dresscode: Casual </p>
                             <p> Location: R0230 </p>
