--- a/recruitment.html
+++ b/recruitment.html
@@ -172,7 +172,7 @@
                             <h3> BBA Meet the Clubs </h3>
                             <h4> Thursday, September 9th | 6-9pm EST |</h4>
                             <p> Attendance Highly Recommended </p>
-                            <p1> Dresscode: Casual </p1>
+                            <p> Dresscode: Casual </p>
                             <p> Location: Rawss </p>
                             <p2> Come learn about PGN and our recruiting process! </p2>
 
