--- a/recruitment.html
+++ b/recruitment.html
@@ -211,7 +211,7 @@
                     <hr class="event-divider">
                     
                     <div class="indented schedule-event fade-in">
-                        <img src="schedule-data/dei-event.jpg" alt=""/>
+                        <img src="schedule-data/app-due.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Application Office Hours </h3>
                             <h4> Tuesday, September 14th | 7:30-8:30pm EST |</h4>
