--- a/recruitment.html
+++ b/recruitment.html
@@ -214,10 +214,10 @@
                         <img src="schedule-data/app-hours.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Application Office Hours </h3>
-                            <h4> Tuesday, September 14th | 7:30-8:30pm EST |</h4>
+                            <h4> Tuesday, September 14th | 8-9pm EST |</h4>
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
-                            <p> Location: B0570 </p>
+                            <p> Location: Zoom </p>
                             <p2> Get help with your application due on Thursday, September 16th at 11:59pm! </p2>
                         </div>
                     </div>
