--- a/recruitment.html
+++ b/recruitment.html
@@ -173,7 +173,7 @@
                             <h4> Thursday, September 9th | 6-9pm EST |</h4>
                             <p> Attendance Highly Recommended </p>
                             <p> Dresscode: Casual </p>
-                            <p> Location: Rawss </p>
+                            <p> Location: Ross </p>
                             <p2> Come learn about PGN and our recruiting process! </p2>
 
                         </div>
