--- a/recruitment.html
+++ b/recruitment.html
@@ -230,7 +230,7 @@
                             <h3> Speed Dating </h3>
                             <h4> Session 1: Thursday, September 16th | 6-8pm EST |</h4>
                             <h4> Session 2: Friday, September 17th | 4-6pm EST |</h4>
-                            <p> Attendance Required (Sessions are 2 hour - attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">one</span> only) </p>
+                            <p> Attendance Required (Sessions are 2 hours - attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">one</span> only) </p>
                             <p> Dresscode: Business Casual </p>
                             <p> Location (Session 1): B1590 </p>
                             <p> Location (Session 2): R1220 </p>
