--- a/members.html
+++ b/members.html
@@ -119,7 +119,7 @@
         
         <div id="navbar" class="animate-bottom">
             <a href="#top"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
-            <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLSdTKj-UcJxCaYEE2SS0lSPMWJLDaLEn1aHu64YYaZBy9s98Jw/viewform" target="_blank">APPLY NOW</a>
+            <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLSecfUxU0Hs9EpTtPPVyNaDd08lMKy4PhYUtqUozgJAj1OJTZg/viewform?usp=sf_link" target="_blank">APPLY NOW</a>
             <a class="active navbar-right" href="recruitment.html">RECRUITMENT</a>
             <a class="active navbar-right" href="#top">MEMBERS</a>
             <a class="active navbar-right" href="index.html#about-us">ABOUT US</a>
@@ -145,7 +145,7 @@
                         Professional Development Organization
                     </h2>
 
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTKj-UcJxCaYEE2SS0lSPMWJLDaLEn1aHu64YYaZBy9s98Jw/viewform" target="_blank">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSecfUxU0Hs9EpTtPPVyNaDd08lMKy4PhYUtqUozgJAj1OJTZg/viewform?usp=sf_link" target="_blank">
                         APPLY NOW
                     </a>
                 </div>
