--- a/recruitment.html
+++ b/recruitment.html
@@ -217,7 +217,8 @@
                             <h4> Tuesday, September 14th | 8-9pm EST |</h4>
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
-                            <p> Location: Zoom </p>
+                            <p> Location: </p>
+                            <a href="https://umich.zoom.us/j/94834710141" target="_blank">Zoom</a>
                             <p2> Get help with your application due on Thursday, September 17th at 11:59pm! </p2>
                         </div>
                     </div>
