--- a/recruitment.html
+++ b/recruitment.html
@@ -200,10 +200,10 @@
                         <img src="schedule-data/dei-event.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> DEI Event </h3>
-                            <h4> Wednesday, September 15th | 6:30-7:30pm EST |</h4>
+                            <h4> Wednesday, September 15th | 5-6pm EST |</h4>
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
-                            <p> Location: B0570 </p>
+                            <p> Location: Robertson </p>
                             <p2> Talk with us about the importance of diversity in PGN, business, and our community! </p2>
                         </div>
                     </div>
