--- a/recruitment.html
+++ b/recruitment.html
@@ -234,7 +234,7 @@
                             <h4> Session 2: Friday, September 17th | 4-6pm EST |</h4>
                             <p> Attendance Required (Sessions are 2 hours - attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">one</span> only) </p>
                             <p> Dresscode: Business Casual </p>
-                            <p> Location (Session 1): B1590 </p>
+                            <p> Location (Session 1): R0240 </p>
                             <p> Location (Session 2): R1220 </p>
                         </div>
                     </div> 
