--- a/recruitment.html
+++ b/recruitment.html
@@ -235,7 +235,7 @@
                             <p> Attendance Required (Sessions are 2 hours - attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">one</span> only) </p>
                             <p> Dresscode: Business Casual </p>
                             <p> Location (Session 1): R0240 </p>
-                            <p> Location (Session 2): R1220 </p>
+                            <p> Location (Session 2): B2560 </p>
                         </div>
                     </div> 
                     
