--- a/recruitment.html
+++ b/recruitment.html
@@ -203,7 +203,7 @@
                             <h4> Wednesday, September 15th | 5-6pm EST |</h4>
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
-                            <p> Location: Robertson </p>
+                            <p> Location: Robertson Auditorium</p>
                             <p2> Talk with us about the importance of diversity in PGN, business, and our community! </p2>
                         </div>
                     </div>
