--- a/recruitment.html
+++ b/recruitment.html
@@ -218,8 +218,8 @@
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
                             <h4> Location: 
-                            <a href="https://umich.zoom.us/j/91079151044" target="_blank">Zoom</a>
-                            <h4>
+                            <a href="https://umich.zoom.us/j/91079151044" target="_blank">Zoom</a> <h4>
+
                             <p2> Get help with your application due on Thursday, September 17th at 11:59pm! </p2>
                         </div>
                     </div>
