--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                     <div class="img-card">
                                         <img src="pgn-bro-list-data/president-welcome.jpg" alt="Slide 2">
                                     </div>
-									<h3 class="v-indented">Habib Bello '22</h3>
+									<h3 class="v-indented">Habib Bello </h3>
                                 </div>
                             </td>
                             <td text-align="left">
