--- a/recruitment.html
+++ b/recruitment.html
@@ -200,10 +200,10 @@
                         <img src="schedule-data/dei-event.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> DEI Event </h3>
-                            <h4> Wednesday, September 15th | 5-6pm EST |</h4>
+                            <h4> Wednesday, September 15th | 5-7pm EST |</h4>
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
-                            <p> Location: Robertson Auditorium</p>
+                            <p> Location: Robertson </p>
                             <p2> Talk with us about the importance of diversity in PGN, business, and our community! </p2>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                         <img src="schedule-data/app-hours.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Application Office Hours </h3>
-                            <h4> Tuesday, September 14th | 8-9pm EST |</h4>
+                            <h4> Tuesday, September 14th | 7-9pm EST |</h4>
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
                             <p> Location: 
