--- a/members.html
+++ b/members.html
@@ -202,6 +202,19 @@
                 <div class="section-box">
                     <div class="section-title indented">
                         <h2>
+                            OMICRON CLASS
+                        </h2>
+                    </div>
+                    
+                    <div class="pc-container"></div>
+                </div>
+            </section>
+
+            <div class="buffer-medium"></div>
+            <section id="xi">
+                <div class="section-box">
+                    <div class="section-title indented">
+                        <h2>
                             XI CLASS
                         </h2>
                     </div>
