--- a/members.html
+++ b/members.html
@@ -198,7 +198,7 @@
             </section>
             
             <div class="buffer-medium"></div>
-            <section id="xi">
+            <section id="omicron">
                 <div class="section-box">
                     <div class="section-title indented">
                         <h2>
