--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                     <div class="img-card">
                                         <img src="pgn-bro-list-data/president-welcome.jpg" alt="Slide 2">
                                     </div>
-									<h3 class="v-indented">Habib Bello </h3>
+									<h3 class="v-indented">Charlie Weissman </h3>
                                 </div>
                             </td>
                             <td text-align="left">
@@ -152,11 +152,11 @@
                                         Our motto, "Business through mindset, not just major," showcases our commitment to diversity. We encourage all majors to apply to further explore your business interest.
                                     </p>
                                     <p>
-                                        I hope you will continue browsing our website to learn more about who we are, what we stand for, and where you can fit in. If you have any questions, please contact me at <a href="mailto:hbello@umich.edu">hbello@umich.edu</a>. We look forward to meeting you!
+                                        I hope you will continue browsing our website to learn more about who we are, what we stand for, and where you can fit in. If you have any questions, please contact me at <a href="mailto:wcharlie@umich.edu">wcharlie@umich.edu</a>. We look forward to meeting you!
                                     </p>
 									
 									<p>
-										Best,<br /> Habib Bello
+										Best,<br /> Charlie Weissman
 									</p>
                                 </div>
                             </td>
