--- a/members.html
+++ b/members.html
@@ -34,7 +34,7 @@
 
             Shruti is a junior majoring in business with a minor in digital studies. She is from Novi, Michigan and loves rooting for Detroit sports, spending time outdoors, and meeting new people. She is pursuing a career in marketing to tie her interests in psychology and business together, and will be interning as a Product Marketing Manager Intern at Microsoft next summer. Shruti is beyond excited to be PGN’s VP Membership and lead alongside her peers.:
             
-            Isabella is a junior studying Business with a minor in Sustainability. She grew up in Ohio and England and now resides in Oakland, MI. She enjoys traveling, karaoke, movies, and tennis. Last summer she worked as a social media and field intern for a State Representative political campaign. She is passionate about working with people, and is excited to pursue a career in human resources or human capital consulting.
+            Mo is a sophomore from Canton, MI studying business. She loves traveling, trying new restaurants, and spending time with family and friends. Passionate about the intersectionality of business and psychology, she would love to pursue a career in human capital consulting and promote overall wellness. Mo is enthusiastic about her role as VP Communications and looks forward to working with her peers to help PGN continue to grow.
 
 
         </template>
