--- a/recruitment.html
+++ b/recruitment.html
@@ -163,9 +163,9 @@
                             <p2> Come learn about PGN and our recruiting process! </p2>
 
                         </div>
-                    </div-->
+                    </div>
                     
-                    <hr class="event-divider">
+                    <hr class="event-divider"-->
                     <div class="indented schedule-event fade-in">
                         <img src="schedule-data/meet-the-brothers.jpg" alt=""/>
                         <div class="schedule-desc">
@@ -219,7 +219,7 @@
                             <p> Dresscode: Casual </p>
                             <p> Location: 
                             <a href="https://umich.zoom.us/j/94285199466" target="_blank">Zoom</a> <p>
-                            <p2> Get help with your application due on Friday, September 17th at 11:59pm! </p2>
+                            <p2> Get help with your application due on Friday, January 21st at 11:59pm! </p2>
                         </div>
                     </div>
 
