--- a/recruitment.html
+++ b/recruitment.html
@@ -53,7 +53,7 @@
         
         <div id="navbar" class="animate-bottom">
             <a href="#top"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
-            <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLSecfUxU0Hs9EpTtPPVyNaDd08lMKy4PhYUtqUozgJAj1OJTZg/viewform?usp=sf_link" target="_blank">APPLY NOW</a>
+            <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">APPLY NOW</a>
             <a class="active navbar-right" href="#top">RECRUITMENT</a>
             <a class="active navbar-right" href="members.html">MEMBERS</a>
             <a class="active navbar-right" href="index.html#about-us">ABOUT US</a>
@@ -80,7 +80,7 @@
                             Professional Development Organization
                         </h2>
 
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSecfUxU0Hs9EpTtPPVyNaDd08lMKy4PhYUtqUozgJAj1OJTZg/viewform?usp=sf_link" target="_blank">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">
                             APPLY NOW
                         </a>
                     </div>
