--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </h2>
 
 					
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSecfUxU0Hs9EpTtPPVyNaDd08lMKy4PhYUtqUozgJAj1OJTZg/viewform?usp=sf_link" target="_blank">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">
                         APPLY NOW
                     </a>
 	
