--- a/recruitment.html
+++ b/recruitment.html
@@ -219,7 +219,7 @@
                             <p> Dresscode: Casual </p>
                             <p> Location: 
                             <a href="https://umich.zoom.us/j/94285199466" target="_blank">Zoom</a> <p>
-                            <p2> Get help with your application due on Friday, January 21st at 11:59pm! </p2>
+                            <p2> Get help with your application due on Thursday, January 20th at 11:59pm! </p2>
                         </div>
                     </div>
 
@@ -246,7 +246,7 @@
                         <img src="schedule-data/app-due.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Application Due </h3>
-                            <h4> Friday, January 21st | 11:59pm EST | 
+                            <h4> Thursday, January 20th | 11:59pm EST | 
                              <a href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">Apply Here</a>
                             </h4>
                             <p> Required </p>
