--- a/recruitment.html
+++ b/recruitment.html
@@ -124,7 +124,7 @@
                 <div class="section-box">
                     
                     <div class="section-title indented">
-                        <h2>FALL 2021 RECRUITMENT</h2>
+                        <h2>WINTER 2022 RECRUITMENT</h2>
                     </div>
                     
                     <div class="buffer-mini"></div>
