--- a/recruitment.html
+++ b/recruitment.html
@@ -138,7 +138,7 @@
                 </div>
                 
                 <div class="email-list">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdHZkNJYe8oChSpSpq7MMuZETL9myb-38GqC8L5U3fo8maFOw/viewform?usp=sf_link" target="_blank">JOIN OUR EMAIL LIST FOR UPDATES!</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSc4TJOxN6Xc99YnJP3rwwCafDakFcqBxeVha5wWnyv0clGQqQ/viewform" target="_blank">JOIN OUR EMAIL LIST FOR UPDATES!</a>
                 </div>
                 
             </section>
