--- a/recruitment.html
+++ b/recruitment.html
@@ -118,7 +118,7 @@
                             <p> Attendance Highly Recommended </p>
                             <p> Dresscode: Casual </p>
                             <p> Location: 
-                            <a href="https://umich.zoom.us/j/97093746604" target="_blank">Zoom</a> <p>
+                            <u><a href="https://umich.zoom.us/j/97093746604" target="_blank">Zoom</a></u> <p>
                             <p2> Come learn about PGN and our recruiting process! </p2>
 
                         </div>
@@ -163,7 +163,7 @@
                             <p> Attendance Optional </p>
                             <p> Dresscode: Casual </p>
                             <p> Location: 
-                            <a href="https://umich.zoom.us/j/94285199466" target="_blank">Zoom</a> <p>
+                            <u><a href="https://umich.zoom.us/j/94285199466" target="_blank">Zoom</a></u> <p>
                             <p2> Get help with your application due on Thursday, January 20th at 11:59pm! </p2>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                         <div class="schedule-desc">
                             <h3> Application Due </h3>
                             <h4> Thursday, January 20th | 11:59pm EST | 
-                             <a href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">Apply Here</a>
+                             <u><a href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">Apply Here</a></u>
                             </h4>
                             <p> Required </p>
                         </div>
