--- a/recruitment.html
+++ b/recruitment.html
@@ -176,7 +176,7 @@
                             <h3> Speed Dating </h3>
                             <h4> Session 1: Wednesday, January 19th | 6-8pm EST |</h4>
                             <h4> Session 2: Thursday, January 20th | 6-8pm EST |</h4>
-                            <p> Attendance Required (Sessions are 2 hours - attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">one</span> only) </p>
+                            <p> Attendance Required (<u>Attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">ONE</span> session only</u>) </p>
                             <p> Dresscode: Business Casual </p>
                             <p> Location (Session 1): R1220 </p>
                             <p> Location (Session 2): R2230 </p>
