redirecting to home page

--- a/recruitment.html
+++ b/recruitment.html
@@ -52,7 +52,7 @@
         </script>
         
         <div id="navbar" class="animate-bottom">
-            <a href="#top"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
+            <a href="index.html"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
             <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">APPLY NOW</a>
             <a class="active navbar-right" href="#top">RECRUITMENT</a>
             <a class="active navbar-right" href="members.html">MEMBERS</a>
