--- a/members.html
+++ b/members.html
@@ -55,6 +55,7 @@
             <!--theta-->Business;Business;Economics;Business / Mechanical Eng.;Business;Business / Information;Mechanical Engineering;Economics / Spanish;Business;Business / Information?
             <!--eta-->Business;Business;Business;Business;Business;Cognitive Science;Business;Information;Economics</template>
         
+            <!--for the years, put the current pledge class on the same line (line 59) and move the previous class on the line below (line 60)-->
         <template class="bro-list-data" id="bro-list-years"><!--omicron-->25;25;25;25;24;24;25;25;25;24;25;24;24;24;25;24;25;24;24;24;24?
             <!--xi-->24;24;23;24;24;23;23;23;24;23;23;24;24;24;23;24;24;24;24?
             <!--nu-->24;24;24;23;24;24;23;24;23;24;24;23;24;23;23;23;23;23;23;24;23?
@@ -307,7 +308,7 @@
                     <h2>FOLLOW US</h2>
                     
                     <div>
-                        <a class="fa fa-envelope-o" href="mailto:pgneboard2021@umich.edu"></a>
+                        <a class="fa fa-envelope-o" href="mailto:pgneboard2022@umich.edu"></a>
                         <a class="fa fa-facebook" href="https://www.facebook.com/PGNMichigan/"></a>
                         <a class="fa fa-linkedin" href="https://www.linkedin.com/company/phi-gamma-nu-delta-phi/"></a>
                         <a class="fa fa-instagram" href="https://instagram.com/pgnuofm?igshid=1fr8cdc093qne"></a>
