Application due date

--- a/recruitment.html
+++ b/recruitment.html
@@ -191,7 +191,7 @@
                         <img src="schedule-data/app-due.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Application Due </h3>
-                            <h4> Thursday, January 20th | 11:59pm EST | 
+                            <h4> TBD | 11:59pm EST | 
                              <u><a href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">Apply Here</a></u>
                             </h4>
                             <p> Required </p>
