Meet the Brothers event info

--- a/recruitment.html
+++ b/recruitment.html
@@ -140,6 +140,21 @@
                     </div>
 
                     <hr class="event-divider">
+
+                    <div class="indented schedule-event fade-in">
+                        <img src="pgn-bro-slides/pgn-bro-slides-3.jpg" alt=""/>
+                        <div class="schedule-desc">
+                            <h3> Meet the Brothers </h3>
+                            <h4> Sunday, September 11th | 2-3pm EST |</h4>
+                            <p> Attendance Highly Recommended </p>
+                            <p> Dresscode: Casual </p>
+                            <p> Location: B1580 </p>
+                            <p2> Come learn about PGN and our recruiting process! </p2>
+
+                        </div>
+                    </div>
+
+                    <hr class="event-divider">
                     
                     <div class="indented schedule-event fade-in">
                         <img src="schedule-data/dei-event.jpg" alt=""/>
@@ -191,7 +206,7 @@
                         <img src="schedule-data/app-due.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Application Due </h3>
-                            <h4> TBD | 11:59pm EST | 
+                            <h4> Thursday, September 15th | 11:59pm EST | 
                              <u><a href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">Apply Here</a></u>
                             </h4>
                             <p> Required </p>
