--- a/recruitment.html
+++ b/recruitment.html
@@ -82,7 +82,7 @@
                 </div>
                 
                 <div class="email-list">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSc4TJOxN6Xc99YnJP3rwwCafDakFcqBxeVha5wWnyv0clGQqQ/viewform" target="_blank">JOIN OUR EMAIL LIST FOR UPDATES!</a>
+                    <a href="https://forms.gle/ZKtSGhJyM5JZge2h7" target="_blank">JOIN OUR EMAIL LIST FOR UPDATES!</a>
                 </div>
                 
             </section>
