Added new application

--- a/members.html
+++ b/members.html
@@ -139,7 +139,7 @@
         
         <div id="navbar" class="animate-bottom">
             <a href="index.html"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
-            <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">APPLY NOW</a>
+            <a class="active navbar-right" href="https://forms.gle/m6JH4iwkqiUCGWzRA" target="_blank">APPLY NOW</a>
             <a class="active navbar-right" href="recruitment.html">RECRUITMENT</a>
             <a class="active navbar-right" href="#top">MEMBERS</a>
             <a class="active navbar-right" href="index.html#about-us">ABOUT US</a>
