--- a/recruitment.html
+++ b/recruitment.html
@@ -53,7 +53,7 @@
         
         <div id="navbar" class="animate-bottom">
             <a href="index.html"><img src="pgn_logo_1.png" width="210" height="62" alt=""/></a>
-            <a class="active navbar-right" href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">APPLY NOW</a>
+            <a class="active navbar-right" href="https://forms.gle/m6JH4iwkqiUCGWzRA" target="_blank">APPLY NOW</a>
             <a class="active navbar-right" href="#top">RECRUITMENT</a>
             <a class="active navbar-right" href="members.html">MEMBERS</a>
             <a class="active navbar-right" href="index.html#about-us">ABOUT US</a>
@@ -189,12 +189,14 @@
                         <img src="schedule-data/speed-dating.jpg" alt=""/>
                         <div class="schedule-desc">
                             <h3> Speed Dating </h3>
-                            <h4> Session 1: Wednesday, September 14th | 8-10pm EST |</h4>
-                            <h4> Session 2: Thursday, September 15th | 6-8pm EST |</h4>
+                            <h4> Session 1: Wednesday, September 14th | 8-9pm EST |</h4>
+                            <h4> Session 2: Wednesday, September 14th | 9-10pm EST |</h4>
+                            <h4> Session 3: Thursday, September 15th | 6-7pm EST |</h4>
+                            <h4> Session 4: Thursday, September 15th | 7-8pm EST |</h4>
                             <p> Attendance Required (<u>Attend <span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'">ONE</span> session only</u>) </p>
                             <p> Dresscode: Business Casual </p>
-                            <p> Location (Session 1): R1230 </p>
-                            <p> Location (Session 2): R0240 </p>
+                            <p> Location (Sessions 1 & 2): R1230 </p>
+                            <p> Location (Sessions 3 & 4): R0240 </p>
                         </div>
                     </div> 
                     
