--- a/recruitment.html
+++ b/recruitment.html
@@ -209,7 +209,7 @@
                         <div class="schedule-desc">
                             <h3> Application Due </h3>
                             <h4> Thursday, September 15th | 11:59pm EST | 
-                             <u><a href="https://docs.google.com/forms/d/e/1FAIpQLScNAFYq5WtKqcgTFp7LaeQ3KlP7poAgWIALifH3R85EsRkY-Q/viewform" target="_blank">Apply Here (Application will be open Friday, September 9th) </a></u>
+                             <u><a href="https://forms.gle/m6JH4iwkqiUCGWzRA" target="_blank">Apply Here (Application will be open Friday, September 9th) </a></u>
                             </h4>
                             <p> Required </p>
                         </div>
